Addressed bugs caused by security updates. Made logout button visible.

--- a/static/style.css
+++ b/static/style.css
@@ -309,8 +309,6 @@ body.dark .flash-info {
 
 /* Settings Button */
 .settings-btn {
-    position: absolute;
-    right: 0;
     width: 36px;
     height: 36px;
     display: flex;
